# email-triage-env

./: Dockerfile  README.md  app.py  baseline_scores.json  environment.py  inference.py  openenv.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  test_fixed.py  test_openenv.py
server/: app.py
tasks/: __init__.py  easy_task.py  grader.py  hard_task.py  medium_task.py
